--- a/16.9-prioriteren en moscow.md
+++ b/16.9-prioriteren en moscow.md
@@ -47,3 +47,18 @@ Een winkelmandje toevoegen
         implementaite icoon winkelmandje
         optelsom alle prijzen
         ...
+
+
+<!-- MoScoW -->
+
+Must haves:
+    Dit moet af op de deadline... als het niet af is dan is het project gefaald
+
+Should have: 
+    Dit zou eigenlijk best wel af moeten, het project is een beetje jammer als het niet af is.
+
+Could have: 
+    Dit kan.. mits we tijd over hebben
+
+Want to have but will not have this time round: 
+    Dit zijn goede ideeen en nuttig om te noteren maar we komen er nu niet aan toe.
