svelte geinstalleerd en nieuwe notities
.

--- a/aantekeningen/16.9-prioriteren en moscow.md
+++ b/aantekeningen/16.9-prioriteren en moscow.md
@@ -4,7 +4,7 @@
 
 Van Epic, langs (user)stories, naar taken.
 
-<!-- Epics -->
+# Epics
 
 "in 1 zin opnoemen wat je in een project gaat doen"
 
@@ -15,7 +15,7 @@ Voorbeelden van epics:
 de website van ... verbeteren
 een nieuwe website lanceren voor ...
 
-<!--Stories  -->
+# Stories
 Stories(kleinere verhalen):
 
 de website van ... verbeteren
@@ -49,7 +49,7 @@ Een winkelmandje toevoegen
         ...
 
 
-<!-- MoScoW -->
+# MoScoW
 
 Must haves:
     Dit moet af op de deadline... als het niet af is dan is het project gefaald
