--- a/aantekeningen/18.9-wrap.up.md
+++ b/aantekeningen/18.9-wrap.up.md
@@ -23,3 +23,9 @@ Readme.md:
 
 Live zetten: 
     Github pages, Vercel, Netlify, onrender.
+
+
+
+Idee als animatie:
+
+Stagger animatie waar de namen in spawnen: bron https://css-tricks.com/staggered-css-transitions/
