--- a/aantekeningen/30.9-svelte.md
+++ b/aantekeningen/30.9-svelte.md
@@ -1,1 +1,39 @@
-# Svelte
+# Sveltekit Principles
+
+- structure
+- routing
+- error handling
+- loading data
+- binding
+- library
+- components
+
+## Structure
+
+alles in wat in /src moet svelte kit nog dingen in gaan doen.
+
+/src - alles wat svelte kit nog moet uitvoeren
+/static - alles waar svelte niks hoeft te doen/uit te voeren, afbeeldingen, etc. (niet in je library)
+/lib - library, components
+/lib/server - (alleen)server side code. mag niet in +page.server.js of +page.js (moet je data beschermen)
+/routes - verschillende paden/pagina's 
+
+.gitignore - patronen voor bestanden die niet naar git gestuurd worden. bijvoorbeeld - .env, node modules.
+.env - daar kunnen wachtwoorden in staan. data die beveiligd moet worden.
+.env.example - soortvan laten zien welke wachtwoorden/data je nodig hebt 
+
+package.json - alles wat nodig is om het project te runnen.
+svelte.config.js - configuratie bestand van svelte. hoe svelte draait en wat voor adapter. 
+vite.config.js - tool om een project te runnen. "builder"
+
+vite is een builder waar svelte in word gedraaid.
+
+sveltekit documentatie doorlezen. voor package.json? 
+
+## Routing
+
+
+
+
+
+
