--- a/aantekeningen/30.9-svelte.md
+++ b/aantekeningen/30.9-svelte.md
@@ -28,11 +28,65 @@ vite.config.js - tool om een project te runnen. "builder"
 
 vite is een builder waar svelte in word gedraaid.
 
-sveltekit documentatie doorlezen. voor package.json? 
+sveltekit documentatie doorlezen. voor package.json. moet je weten, belangrijk
 
 ## Routing
 
+/routes/
+  [dynamic]/
+      +page.server.js
+      +page.svelte
+  [static]/
+      +page.server.js
+      +page.svelte
 
+## Error handling
+
+routes/
+  +error.svelte
+```
+<script>
+  import { page } from `$app/stores
+
+  console.log($page.error)
+</script>
+```
+
+    <h1>Er gaat iets mis!!!<h1/>
+    <p>{$page.status} - {$page.error.message} </p>
+
+
+
++layout.svelte - soort sjabloon, je kan layouts nesten
+```
+  <header>
+    <h1>Dit is een sveltekit project</h1>
+  </header>
+  
+  <main>
+    <slot/> "Er gaat iets mis!!!"
+  </main>
+      
+  <footer>
+    <p>copyright, all rights reservered</p>
+  </footer>
+  ```
+
+## Loading data
+
+Framework projecten hebben een manier om data in te laden
+
++page.server.js = asynchroon (wat er zit wachttijd in)
+  server side is "async" nodig
+
+Kan uit .env
+kan vanuit JS naar +page.svelte
+
+## Binding
+
+## Library
+
+## Components
 
 
 
