--- a/aantekeningen/30.9-svelte.md
+++ b/aantekeningen/30.9-svelte.md
@@ -84,10 +84,53 @@ kan vanuit JS naar +page.svelte
 
 ## Binding
 
+Framework projecten hebben een manier om data te binden.
+
+```
+<script>
+  let name = 'world'
+  $: shout = name + 'rocks!'
+</script>
+
+<input bind:value={name}> - hiermee kan je de tekst van de hele html veranderen waar je {name} gebruikt. kan in een tekstbox
+
+<h1>Hello {name}</h1> = <h1> Hello world </p>
+<p> hello {shout} </p> = <p> hello world rocks! </p>
+```
+
+
 ## Library
+
+De meeste framework projecten hebben een bibliotheek functie
+
+```
+/lib/Header.svelte
+
+<header>
+  <h1>dit is een svelte project</h1>
+</header>
+
+/lib/index.js
+
+export {default as Header} from './Header.svelte'
+
+export {default as Footer} from './Footer.svelte'
+```
+
+componenten in je library met hoofdletter beginnen want dan zie je dat het een component is
+```
+/layout.svelte
+  <script>
+    import {Header, Footer} from '$lib'
+  </script>
+
+  <Header />
+  <Footer />
+```
 
 ## Components
 
+foto
 
 
 
