--- a/aantekeningen/4.10-WLW.md
+++ b/aantekeningen/4.10-WLW.md
@@ -1,2 +1,25 @@
 # We Love Web 4-10-2024 - Nicolas Garnier
 
+[Zijn website](https://nico.computer/)
+
+started dev in 2012
+
+End of flash, start of JS for everything + WebGL
+Started freelancing in 2018
+Agencies, Product & Start-ups
+
+### Creative Developer?
+- Fancy term for dev with an eye for creativity
+- uses all available tools to solve a creative & technical challenge
+- Website, apps , installations
+- JS, CSS, WebGL Processing, Unity, GenAI, LLM...
+
+At the core: code, design, motion & interactivity
+
+How can animations & interactivity help?
+
+- create anticipation & surpirse 
+- support the narrative & set the mood
+- engage the user
+- solve a design or technical challenge
+
