--- a/aantekeningen/4.10-WLW.md
+++ b/aantekeningen/4.10-WLW.md
@@ -23,3 +23,12 @@ How can animations & interactivity help?
 - engage the user
 - solve a design or technical challenge
 
+Conclusion
+
+- Think of animation and interaction as an extension to an original intent
+- be open minded
+- ask yourself what it brings and ask for feedback
+- be ready to spend a lot of time on it
+
+  vitaarchitecture.com
+  loerarchitecten.com
