--- a/aantekeningen/7.10-Scrum.md
+++ b/aantekeningen/7.10-Scrum.md
@@ -6,9 +6,11 @@
 4. nieuwe agile instrumenten
 5. get (even more) agile!
 
-Termen op wikipedia pagina:
+### Termen op wikipedia pagina:
 
 design-driven development, agile software development, dont repeat yourself, KISS principle, Loose coulling, Release earlt, release often, Dont make me think, Modular programming, Rubbder duck debugging, Scrum, Software reviews.
+
+***
 
 Specification-related paradigms: iterative and incremental development, Waterfall model, Formal methods.
 
