--- a/aantekeningen/18.9-wrap.up.md
+++ b/aantekeningen/18.9-wrap.up.md
@@ -15,17 +15,16 @@ Hoe? vragen aan opdrachtgever
 # Wrapup: over hoe je projecten oplevert
 
 Refactored code: 
-    gestructureerde code (conventies), semantiek, geen commented code, geen console.log(), goede tabs..
+    gestructureerde code (conventies), semantiek, geen commented code, geen console.log(), goede tabs, een versie release, goede pull request strategie,                components, linter installeren
 
 Readme.md: 
-    Kenmerken, live link, screenshots, instructies(uitleg over het gebruik), Installatiehandleiding, CMS uitleg, Huisstijl (of waar die te vinden is), bijdragen?, (hints voor voolgende dev-teams), gebruikte bronnen, badges met gebruikte technologie, 
+    Kenmerken, live link, screenshots, instructies(uitleg over het gebruik), Installatiehandleiding, CMS uitleg, Huisstijl (of waar die te vinden is), bijdragen?,     (hints voor voolgende dev-teams), gebruikte bronnen, badges met gebruikte technologie, link naar projectboard, introductie, licentie, changelog,(o.b.v versies)
 
+Testen: 
+    performance, screenreaders, keyboard, lighthouse, html validator, kleurcontrast, WCAG, user test, browser test, devicetest, css validator.
+
+Klant: vragen wat zij willen
 
 Live zetten: 
     Github pages, Vercel, Netlify, onrender.
 
-
-
-Idee als animatie:
-
-Stagger animatie waar de namen in spawnen: bron https://css-tricks.com/staggered-css-transitions/
