--- a/aantekeningen/11-10.md
+++ b/aantekeningen/11-10.md
@@ -1,12 +1,28 @@
 Portflow
 
-3.2 - UML diagram - Data model - breakdownschets - lofi  hifi - Figma
+1.1 - Projectboard inrichten
 
-4.1 - debriefing -> user story's -> user stories onderbouwen -> ...
+1.2 - ?
+
+1.3 - issues verwerken - alle tests gedaan, performance, accessibility, user
+
+2.1 - ?
+
+2.2 - ?
+
+2.3 - team canvas
 
 3.1 - briefing/debfriefing of sprint review
 
+3.2 - UML diagram - Data model - breakdownschets - lofi  hifi - Figma / ontwerpkeuzes uitleggen en duidelijk overbrengen. sprintreview? 
+
 3.3 - projectboard - issues - pull request / stand-ups - check outs
+
+4.1 - debriefing -> user story's -> user stories onderbouwen -> ...
+
+4.2- Data model - breakdown - lofi hifi - figma
+
+4.3- Code, tools, frameworks
 
 5.1 - mailingslist - blogposts - cssweekly - frontendfocus - codrops - mastodon - kevin powell - performance now - medium - smashing magazine - linkedin 
 
@@ -14,7 +30,6 @@ Portflow
 
 5.3 - ben je een slacker of "goed student" ?
 
-1.3 - issues verwerken - alle tests gedaan
 
 portflow aanleveren - screenshot en link naar projectboard. 
 
