--- a/aantekeningen/11-10.md
+++ b/aantekeningen/11-10.md
@@ -14,7 +14,7 @@ Portflow
 
 3.1 - briefing/debfriefing of sprint review
 
-3.2 - UML diagram - Data model - breakdownschets - lofi  hifi - Figma / ontwerpkeuzes uitleggen en duidelijk overbrengen. sprintreview? 
+3.2 - UML diagram - Data model - breakdownschets - lofi  hifi - Figma / ontwerpkeuzes uitleggen en duidelijk overbrengen. sprintreview? design critique opdracht
 
 3.3 - projectboard - issues - pull request / stand-ups - check outs
 
