--- a/aantekeningen/11-10.md
+++ b/aantekeningen/11-10.md
@@ -2,15 +2,15 @@ Portflow
 
 1.1 - Projectboard inrichten
 
-1.2 - ?
+1.2 - afpsraken - code conventies - en onderbouwen waaorm je die afpsraken en conventies hebt
 
 1.3 - issues verwerken - alle tests gedaan, performance, accessibility, user
 
-2.1 - ?
+2.1 - Teamcanvas - projectboard - kampvuursessie
 
-2.2 - ?
+2.2 - code review -> sprint review -> kampvuursessie
 
-2.3 - team canvas
+2.3 - team canvas - mentorrol?
 
 3.1 - briefing/debfriefing of sprint review
 
