--- a/aantekeningen/16-10.shyanta.md
+++ b/aantekeningen/16-10.shyanta.md
@@ -1,1 +1,111 @@
 # Tech stack
+
+techlead van Triple
+
+1. Triple
+2. Webteam
+3. Over
+4. Way of working
+5. Tech stack
+6. Tech tips
+
+## Triple
+
+25 jaar
+250+ tech & design liefhebbers
+
+Onze core
+  Development - Design - Technical Operations - Data & Insights
+
+Cultuur
+  mooie dingen maken met leuke mensen
+  We delen onze ervaringen, projecten en innovaties met elkaar... en met jou...
+  We zoeken conferenties op om geinspireerd en up-to-date te blijven
+  Gek op feestjes en missen geen moment pm er een te vieren!
+
+## Webteam
+
+Competentie
+  Web
+    React/Svelte
+    Afhankelijk van type project
+      Bestaat het al? Vaak React -> Dus blijft React
+      Nieuw?
+        Enkel React als er afhankelijkheid is van een oud project, of samen gaat
+
+  SmartTV
+    - "Gewoon" een website
+    - Niet zo smart
+    - Oud
+    - Svelte
+      - Lightweight
+      - Build naar HTML, JS, & CSS, geen grote bundle files
+      - Betere performance
+    - Weinig RAM en geheuge
+
+  React Native
+    React Native
+      React basics
+      Styling werkt wat anders
+      Mogelijkheid tot native componenten inladen/gebruiken
+        Data picker,numbered input etc.
+        Native code (swift,gotlin) kan ook zelf geschreven worden
+      Een manier om apps voor beide platformen tegelijk te bouwen met een shared laag
+      Nieuwste competentie
+
+## Way of Working
+
+Scrum
+  Daily standup
+  Refinements
+  Retrospects
+  Sorint review/planning
+  Techlead & product owner rol
+JIRA -> Ticket managemant (Zoals Trello)
+GIT -> Code reviews
+Conventional Commits
+
+## Tech Stack
+
+Web - React Native - Smart TV
+
+Web
+
+React
+  Web/React Native
+
+### De gemene deler
+
+Elke competentie werkt met dezelfde taal
+kennissessies zijn belangrijk
+coding guidelnes zijn deelbaar
+
+### De verschillen
+
+Elk team werkt aan een ander type product
+Elke product heeft zijn bijzonderheden
+  Native Elementen -> React Native
+  Support oude browsers -> SmartTV
+Elk product heeft andere afhankelijkheden
+  API
+  Etc.
+
+### Wat kan invloed hebben op je tech-stack?
+
+SEO Performance
+Machines met weinig performance?
+Eenmalige website?
+Wens voor animaties?
+
+## Tech tips
+
+Dont repeat yourself - niet steeds opnieuw doen, ergens documenteren om het te hergebruiken
+Gebruik van componenten si heilig, het framework waarin je giet staat hier los van.
+
+Webcomponents
+
+
+
+
+
+
