--- a/aantekeningen/16-10.shyanta.md
+++ b/aantekeningen/16-10.shyanta.md
@@ -104,8 +104,9 @@ Gebruik van componenten si heilig, het framework waarin je giet staat hier los v
 
 Webcomponents
 
+hoe leer je 2 talen tijdens je stage?
 
-
-
+gewoon dingen doen.
+Lezen en gelijk toepassen
 
 
