--- a/aantekeningen/18-10.DionPieters.md
+++ b/aantekeningen/18-10.DionPieters.md
@@ -1,1 +1,21 @@
-hoi
+# Dion Pieters - We Love Web
+
+moet een developer kunnen designen
+en moet een designer kunnen developen
+
+moet ieder element op je site een vorm van animatie hebben?
+
+WebGL - programmatisch tekenen, niet tabbaar etc. niet toegankelijk. canvas
+
+activetheory.net
+easings.net
+
+vragen:
+
+hoe zorg je ervoor dat website niet te zwaar wordt:
+
+  tooling waarmee ze kunnen achterhalen welke grafische kaart de gebruiker heeft en daarop baseren welke animatie ze wel of niet aan houden. 
+  slecht? paar animaties weg
+  goed? alle animaties gewoon
+
+
