added aantekening voor markdown
markdown notities klaargemaakt om te gebruiken als json

--- a/src/aantekeningen/16-10.shyanta.md
+++ b/src/aantekeningen/16-10.shyanta.md
@@ -1,3 +1,11 @@
+---
+title: Triple Tech-stacks
+presentator: Shyanta Vleugel
+date: 2024-10-16
+description: Shyanta Vleugel die haarzelf en Triple voorstelt en de bij dit bedrijf gebruikte tech-stacks bespreekt.
+tags: post
+---
+
 # Tech stack
 
 techlead van Triple
