--- a/src/aantekeningen/16.9-prioriteren en moscow.md
+++ b/src/aantekeningen/16.9-prioriteren en moscow.md
@@ -1,3 +1,10 @@
+---
+title: Workshop prioriteren
+presentator: Justus Sturkeboom
+date: 2024-09-16
+description: Justus legt prioriteren uit waarin je user stories schrijft, keuzes maakt, en prioriteert met MoSCoW
+---
+
 16-9
 
 5 x 40 = 200 x 2 = 400 x 60 = $24000. zijn je projecten zoveel waard? 
