--- a/src/aantekeningen/18-10.DionPieters.md
+++ b/src/aantekeningen/18-10.DionPieters.md
@@ -1,3 +1,11 @@
+---
+title: We Love Web - Creative developer & portfolio
+presentator: Dion Pieters
+date: 2024-10-18
+description: We Love Web van Dion Pieters over Creative Developer én docent FDND (!) over zijn portfolio 
+tags: post
+---
+
 # Dion Pieters - We Love Web
 
 moet een developer kunnen designen
