--- a/src/aantekeningen/18.9-wrap.up.md
+++ b/src/aantekeningen/18.9-wrap.up.md
@@ -1,3 +1,11 @@
+---
+title: Voorbereiding wrap-up
+presentator: Justus Sturkenboom
+date: 2024-09-18
+description: College over het voorbereiden van een project/wrap up
+tags: post
+---
+
 # Voorbereiding voor wrap-up
 <!--  -->
 
