--- a/src/aantekeningen/30.9-svelte.md
+++ b/src/aantekeningen/30.9-svelte.md
@@ -1,3 +1,15 @@
+---
+title: Svelte kit principles
+presentator: Justus Sturkenboom
+date: 2024-09-30
+description: College over Sveltekit
+tags: post
+---
+
+
+
+
+
 # Sveltekit Principles
 
 - structure
