--- a/src/aantekeningen/4.10-WLW.md
+++ b/src/aantekeningen/4.10-WLW.md
@@ -1,3 +1,12 @@
+---
+title: We Love Web - Nicolas Garnier
+presentator: Nicolas Garnier
+date: 2024-10-04
+description: We Love Web college over "Creative Developer"
+tags: post
+---
+
+
 # We Love Web 4-10-2024 - Nicolas Garnier
 
 [Zijn website](https://nico.computer/)
