--- a/src/aantekeningen/7.10-Scrum.md
+++ b/src/aantekeningen/7.10-Scrum.md
@@ -1,3 +1,11 @@
+---
+title: Workshop scrum
+presentator: Justus Sturkenboom
+date: 2024-10-07
+description: Workshop over projectmethodiek, standup, scrum
+tags: post
+---
+
 # Scrum en agile
 
 1. Software development is moeilijk
