--- a/src/aantekeningen/23.9-sprintplanning14.md
+++ b/src/aantekeningen/23.9-sprintplanning14.md
@@ -1,3 +1,11 @@
+---
+title: Sprintplanning - sprint 14
+presentator: Dorien Drees
+date: 2024-09-23
+description: College over de sprintplanning van sprint 14
+tags: post
+---
+
 # Sprint planning
 
 ## overzicht semester 3
