changed links in .md

--- a/src/aantekeningen/18-10.DionPieters.md
+++ b/src/aantekeningen/18-10.DionPieters.md
@@ -15,8 +15,8 @@ moet ieder element op je site een vorm van animatie hebben?
 
 WebGL - programmatisch tekenen, niet tabbaar etc. niet toegankelijk. canvas
 
-activetheory.net
-easings.net
+[activetheory.net](activetheory.net)
+[easings.net](easings.net)
 
 vragen:
 
