--- a/src/aantekeningen/4.10-WLW.md
+++ b/src/aantekeningen/4.10-WLW.md
@@ -39,5 +39,5 @@ Conclusion
 - ask yourself what it brings and ask for feedback
 - be ready to spend a lot of time on it
 
-  vitaarchitecture.com
-  loerarchitecten.com
+  [vitaarchitecture.com](vitaarchitecture.com)
+  [loerarchitecten.com](loerarchitecten.com)
