removed unncessecary code

--- a/src/aantekeningen/11-9.journal.md
+++ b/src/aantekeningen/11-9.journal.md
@@ -1,3 +1,11 @@
+---
+title: Learning Journal
+presentator: Lemuel Magsino
+date: 2024-09-11
+description: Learning journal schrijven
+tags: post
+---
+
 # Leervragen/ Learning journal
 
 _Formuleer 2 of 3 leervragen als uitgangspunt voor deze sprint._
