--- a/src/aantekeningen/11-11.sprintplanning16.md
+++ b/src/aantekeningen/11-11.sprintplanning16.md
@@ -47,6 +47,19 @@ De focus ligt op het ontwerpen en bouwen van een robuust, goed werken component,
 
 RAP/PE website - Responsive/Accessible/Performance - Progessive enhanced
 
+Woensdag af:
+
+Morphological chart:
+
+are used in product design and are particularly useful to come up with unexpected alternatives for complex desigsn. their origin lies in the field of industrial product design.
+
+Benodigdheden:
+
+- wil om varianten van een app te bedenken
+- een systematische manier van werken
+- een vel A3 papier en tekenmaterialen
+
+  
 
 
 
