--- a/src/aantekeningen/21-8.svelte-aantekeningen.md
+++ b/src/aantekeningen/21-8.svelte-aantekeningen.md
@@ -1,3 +1,11 @@
+---
+title: Svelte
+presentator: Justus Sturkeboom
+date: 2024-08-21
+description: College over Svelte
+tags: post
+---
+
 # Aantekeningen
 
 # [Guide to Svelte/Sveltekit](https://learn.svelte.dev/tutorial/welcome-to-svelte)
